# ndisgtk3

./: Makefile  NEWS  README.md  meson.build  ndisgtk  ndisgtk-kde.desktop.in  ndisgtk.8  ndisgtk.desktop.in  ndisgtk.glade  ndisgtk.xpm
po/: Makefile  POTFILES.in  am.po  ar.po  ast.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  ko.po  ku.po  lt.po  lv.po  meson.build  mk.po  ms.po  nb.po  ndisgtk.pot  (+22 more)
